clear all button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         </button>
         &nbsp;
         <button (click)="clearDB()" class="btn btn-danger btn-sm">
-          <span class="glyphicon glyphicon-trash"></span> Clear
+          <span class="glyphicon glyphicon-trash"></span> Clear all
         </button>
         &nbsp;
         <button (click)="refreshListOfTables()" class="btn btn-success btn-sm">
