--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,17 @@
   <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
     <div class="container">
       <div class="collapse navbar-collapse" id="navbarResponsive">
-
         <select [ngModel]="selectElemDB" (ngModelChange)="setUrl($event)">
           <option *ngFor="let url of databaseUrls" [ngValue]="url">
-            {{url.url}}
+            {{ url.url }}
           </option>
         </select>
         &nbsp;
-        <button (click)="newDatabase()" type="button" class="btn btn-success btn-sm">
+        <button
+          (click)="newDatabase()"
+          type="button"
+          class="btn btn-success btn-sm"
+        >
           <span class="glyphicon glyphicon-plus"></span> Add
         </button>
         &nbsp;
@@ -27,11 +30,18 @@
 
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item">
-            <input type="number" name="sizeOfSelect" id="sizeOfSelect" [(ngModel)]="limit" />&nbsp;
-            <span class="text-white">rows from </span>
-            <select [ngModel]="selectElemTable" (ngModelChange)="setTable($event)">
-              <option *ngFor="let item of tables" [ngValue]="item" >
-                {{item.name}}
+            <input
+              type="number"
+              name="sizeOfSelect"
+              id="sizeOfSelect"
+              [(ngModel)]="limit"
+            />&nbsp; <span class="text-white">rows from </span>
+            <select
+              [ngModel]="selectElemTable"
+              (ngModelChange)="setTable($event)"
+            >
+              <option *ngFor="let item of tables" [ngValue]="item">
+                {{ item.name }}
               </option>
             </select>
             <button (click)="refreshTable()" class="btn btn-success btn-sm">
@@ -41,15 +51,10 @@
         </ul>
 
         <ul class="nav navbar-nav ml-auto">
-          <li class="nav-item">
-          </li>
+          <li class="nav-item"></li>
 
-
-          <li class="nav-item">
-
-          </li>
+          <li class="nav-item"></li>
         </ul>
-
       </div>
     </div>
   </div>
@@ -59,145 +64,173 @@
   <br />
 
   <div *ngIf="!busy" class="row" style="margin:5px;">
-
-
     <div class="col-md-4" style="text-align: center;">
-      <button class="btn btn-md btn-primary" style="margin:auto;" (click)="prev()">&lt; Back</button>
+      <button
+        class="btn btn-md btn-primary"
+        style="margin:auto;"
+        (click)="prev()"
+      >
+        &lt; Back
+      </button>
     </div>
 
     <div class="col-md-4" style="text-align: center;">
       <span class="badge badge-pill badge-primary" style="margin-top: 5px;">
-        <strong>{{getRange()}}</strong>
+        <strong>{{ getRange() }}</strong>
       </span>
-
-
-
     </div>
 
     <div class="col-md-4" style="text-align: center;">
-      <button class="btn btn-md btn-primary" (click)="next()">Forward &gt;</button>
+      <button class="btn btn-md btn-primary" (click)="next()">
+        Forward &gt;
+      </button>
     </div>
-
   </div>
 
   <div class="container" *ngIf="busy">
     <div class="row">
-      <div class="col-md-4">
-      </div>
+      <div class="col-md-4"></div>
 
       <div class="col-md-4">
-        <div class="card text-white bg-primary animated infinite tada" style="width:80%; margin:0 auto; text-align:center; margin-top: 100px;">
+        <div
+          class="card text-white bg-primary animated infinite tada"
+          style="width:80%; margin:0 auto; text-align:center; margin-top: 100px;"
+        >
           <br />
-          <strong>
-            {{busyMessage}}
-          </strong>
-          <br />
+          <strong> {{ busyMessage }} </strong> <br />
         </div>
       </div>
 
-      <div class="col-md-4">
-      </div>
-
+      <div class="col-md-4"></div>
     </div>
-
   </div>
 
-
-
   <div id="databaseTable" *ngIf="!editing && !busy" style="margin:15px;">
-    <table class="table table-striped table-hover ">
+    <table class="table table-striped table-hover">
       <tr>
         <th>#</th>
-        <th *ngFor="let col of tableColumns; let i = index">{{col}}</th>
+        <th
+          *ngFor="let col of tableColumns; let i = index"
+          (click)="setOrder(col)"
+        >
+          {{ col }}
+          <span
+            *ngIf="order.indexOf(col) > -1 && order.indexOf('asc') > -1"
+            class="glyphicon glyphicon-arrow-up"
+          ></span>
+          <span
+            *ngIf="order.indexOf(col) > -1 && order.indexOf('desc') > -1"
+            class="glyphicon glyphicon-arrow-down"
+          ></span>
+        </th>
         <th style="width:100px;">
           <span class="glyphicon glyphicon-certificate"></span> Options
         </th>
       </tr>
 
-
       <tr *ngFor="let row of tableRows; let i = index">
-        <td>{{i+1}}</td>
-        <td *ngFor="let col of tableColumns; let i = index">
-          {{row[col]}}
-        </td>
+        <td>{{ i + 1 }}</td>
+        <td *ngFor="let col of tableColumns; let i = index">{{ row[col] }}</td>
         <td>
           <button (click)="edit(row, i)" class="btn btn-primary btn-sm">
-            <span class="glyphicon glyphicon-pencil" style="color:white"></span> Edit
+            <span class="glyphicon glyphicon-pencil" style="color:white"></span>
+            Edit
           </button>
           &nbsp;
           <button (click)="deleteRowButton(row)" class="btn btn-primary btn-sm">
-            <span class="glyphicon glyphicon-trash" style="color:white"></span> Delete
+            <span class="glyphicon glyphicon-trash" style="color:white"></span>
+            Delete
           </button>
-
         </td>
-
       </tr>
-
-
-
-
-
     </table>
-
   </div>
 
   <br />
   <div class="container">
     <div class="row">
-      <div *ngIf="editing" class="col-md-3">
-      </div>
+      <div *ngIf="editing" class="col-md-3"></div>
 
       <div *ngIf="editing" class="col-md-6" id="editForm">
         <form>
           <fieldset>
             <h2>Edit row</h2>
-            <div *ngFor="let col of tableColumns; let i = index" class="form-group">
-              <label>{{col}}</label>
-              <input type="text" class="form-control form-control-lg" id="field{{i}}" name="field{{i}}" aria-describedby="" [(ngModel)]="tableRowToEdit[col]"
-                placeholder="">
+            <div
+              *ngFor="let col of tableColumns; let i = index"
+              class="form-group"
+            >
+              <label>{{ col }}</label>
+              <input
+                type="text"
+                class="form-control form-control-lg"
+                id="field{{ i }}"
+                name="field{{ i }}"
+                aria-describedby=""
+                [(ngModel)]="tableRowToEdit[col]"
+                placeholder=""
+              />
             </div>
-            <button type="button" (click)="saveEdit()" class="btn btn-primary">Update</button>
-            <button type="button" (click)="cancelEdit()" class="btn btn-warning">Cancel</button>
+            <button type="button" (click)="saveEdit()" class="btn btn-primary">
+              Update
+            </button>
+            <button
+              type="button"
+              (click)="cancelEdit()"
+              class="btn btn-warning"
+            >
+              Cancel
+            </button>
           </fieldset>
         </form>
-
-
       </div>
 
-      <div *ngIf="editing" class="col-md-3">
-      </div>
-
+      <div *ngIf="editing" class="col-md-3"></div>
     </div>
   </div>
-
 
   <br />
   <div class="container">
     <div class="row">
-      <div *ngIf="inserting" class="col-md-3">
-      </div>
+      <div *ngIf="inserting" class="col-md-3"></div>
 
       <div *ngIf="inserting" class="col-md-6" id="insertForm">
         <form>
           <fieldset>
             <h2>Edit row</h2>
-            <div *ngFor="let col of tableColumns; let i = index" class="form-group">
-              <label>{{col}}</label>
-              <input type="text" class="form-control form-control-lg" id="ifield{{i}}" name="field{{i}}" aria-describedby="" [(ngModel)]="tableRowToInsert[col]"
-                placeholder="">
+            <div
+              *ngFor="let col of tableColumns; let i = index"
+              class="form-group"
+            >
+              <label>{{ col }}</label>
+              <input
+                type="text"
+                class="form-control form-control-lg"
+                id="ifield{{ i }}"
+                name="field{{ i }}"
+                aria-describedby=""
+                [(ngModel)]="tableRowToInsert[col]"
+                placeholder=""
+              />
             </div>
-            <button type="button" (click)="saveInsert()" class="btn btn-primary">Insert</button>
-            <button type="button" (click)="cancelInsert()" class="btn btn-warning">Cancel</button>
+            <button
+              type="button"
+              (click)="saveInsert()"
+              class="btn btn-primary"
+            >
+              Insert
+            </button>
+            <button
+              type="button"
+              (click)="cancelInsert()"
+              class="btn btn-warning"
+            >
+              Cancel
+            </button>
           </fieldset>
         </form>
-
-
       </div>
 
-      <div *ngIf="inserting" class="col-md-3">
-      </div>
-
+      <div *ngIf="inserting" class="col-md-3"></div>
     </div>
   </div>
-
 </div>
